--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.323.0",
     "moment": "^2.30.1",
-    "next": "14.1.0",
+    "next": "^14.1.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
